<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp"
    android:background="@color/castellano">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Inicioapp"
        android:textSize="25sp"
        android:padding="22dp"
        android:background="@color/castellano"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/castellanointerior"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMC"
            android:textSize="25sp"
            android:textColor="@color/castellano"/>
        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/calculoIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbIMC"
                android:textSize="15sp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/masInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbInformacion"
                android:textSize="15sp"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnEleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/rbIMC"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>