<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp"
    android:background="@color/castellano">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Inicioapp"
        android:textSize="25sp"
        android:padding="22dp"
        android:background="@color/castellano"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="70dp"
        android:background="@color/castellanointerior"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMC"
            android:textSize="25sp"
            android:textColor="@color/castellano"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/etAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:hint="Metros"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/etPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:hint="Kg"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/btnCalcular"
            android:onClick="onClickCalcular"/>
        <Button
            android:id="@+id/btnFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/btnFin"/>
    </LinearLayout>

</LinearLayout>